Actions
Bug #9187
closedst_table leaks when exception is raised in Hash#rehash
Bug #9187:
st_table leaks when exception is raised in Hash#rehash
Updated by Anonymous almost 13 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r43942.
Masaki, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- hash.c (
rb_hash_rehash): fix to free newst_tablewhen exception
is raised indo_hash(). [Bug #9187]
Updated by usa (Usaku NAKAMURA) over 12 years ago
- Backport changed from 1.9.3: REQUIRED, 2.0.0: REQUIRED to 1.9.3: DONE, 2.0.0: REQUIRED
backported into ruby_1_9_3 at r44948.
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 1.9.3: DONE, 2.0.0: REQUIRED to 1.9.3: DONE, 2.0.0: DONE
r43942, r43957 and r43975 were backported to ruby_2_0_0 at r45011.
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Description updated (diff)
Actions